src/core/styles/globals.css
@import '@csstools/normalize.css';
@import 'open-color/open-color.css';

:root {
  --golden-gap: 2px;
  --golden-gap-2x: calc(var(--golden-gap) * 2);
  --golden-gap-4x: calc(var(--golden-gap) * 4);
  --highlight-level1: var(--oc-gray-2);
  --highlight-level2: var(--oc-gray-3);
  --highlight-level3: var(--oc-gray-4);
  --highlight-level4: var(--oc-gray-5);
  --highlight-level5: var(--oc-gray-6);
  --input-height: 22px;
  --main-background-color: var(--oc-white);
  --main-color1: var(--oc-blue-5);
  --main-color2: var(--oc-orange-5);
  --main-color3: var(--oc-teal-5);
  --main-color4: var(--oc-red-7);
  --main-color5: #8d6e63; /* same as material color palette brown 400 */
  --main-font-color: var(--oc-gray-9);
}

@media (prefers-color-scheme: dark) {
  :root {
    --main-background-color: var(--oc-gray-9);
    --highlight-level1: var(--oc-gray-8);
    --highlight-level2: var(--oc-gray-7);
    --highlight-level3: var(--oc-gray-6);
    --highlight-level4: var(--oc-gray-5);
    --highlight-level5: var(--oc-gray-4);
    --main-font-color: var(--oc-white);
  }
}

@font-face {
  font-display: fallback;
  font-family: 'Archivo Narrow';
  src: url('~typeface-archivo-narrow/files/archivo-narrow-latin-400.woff2');
}

:global(body) {
  margin: 0;
  background-color: var(--main-background-color);
  color: var(--main-font-color);
}

:global([hidden]) {
  display: none !important;
}

